# example_backend

./: .gitignore  Cargo.toml  config.json  docker-compose.yml  flake.nix
src/: config.rs  main.rs
src/config/: io.rs  keypair.rs
src/db/: mock.rs  mod.rs  schema.rs  sql.rs  users.rs
src/db/migrations/2022-10-26-234705_add_users/: up.sql
src/model/: types.rs  user.rs
src/routing/: auth.rs  errors.rs  health.rs  mod.rs
src/routing/auth/: requests.rs
src/state/: auth.rs  hasher.rs  mod.rs  random.rs  time.rs
src/state/jwt/: claims.rs  error.rs  from_request.rs  mod.rs
src/testing/: mod.rs  test_data.rs
