[package]
name = "example_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  {version = "0.6.0-rc.2", features = ["headers", "macros"] }
tokio = { version = "1", features = ["full"] }

diesel = { version = "2", features = ["r2d2", "postgres", "chrono", "uuid"] }

serde = { version = "1" }
serde_json = "1"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

microtype = { version = "0.7.6", features = ["serde", "diesel"] }
validity = "0.1"

rand = "0.8"

jsonwebtoken = "8"
bcrypt = "0.13"

tracing = "0.1"
tracing-subscriber = "0.3"

color-eyre = "0.6"
thiserror = "1"

static_assertions = "1"

[dev-dependencies]
axum-test-helper = "0.1"
once_cell = "1"
rand_chacha = "0.3"
insta = "1"
